2005-07-12  Ralf Angeli  <angeli@iwi.uni-sb.de>

	* font-latex.el (font-latex-match-math-envII): Match environment
	begin and end with whitespace between macro and argument as well.

	* doc/install.texi (Configure): Add `file' macro.

	* texmathp.el (texmathp-match-environment): Match environment
	begin and end with whitespace between macro and argument as well.

2005-07-12  David Kastrup  <dak@gnu.org>

	* doc/wininstall.texi: 

	* doc/install.texi (Configure): Explain prefix a bit more.

	* doc/Makefile.in (install-man): include tex-ref.tex.

2005-07-08  Ralf Angeli  <angeli@iwi.uni-sb.de>

	* tex.el (TeX-insert-quote): Do not inhibit special quote
	insertion in docTeX documentation parts.

	* font-latex.el (font-latex-match-command-with-arguments)
	(font-latex-match-command-in-braces): Remove call to
	`font-latex-commented-outp'.
	(font-latex-match-quotation): Do not consider matches in comments
	or verbatim-like constructs.  Fix typo.

2005-07-07  Ralf Angeli  <angeli@iwi.uni-sb.de>

	* latex.el (LaTeX-fill-move-to-break-point): Make non-MULE
	XEmacsen happy.
	(LaTeX-fill-paragraph): Don't treat trailing comment starters as
	code comments.

	* font-latex.el (font-latex-match-quotation): Always use multibyte
	strings for comparison.

	* doc/auctex.texi (top): Make the summary notes appear as
	"Executive Summary" in printed output.

	* doc/intro.texi: Main heading in rawtext case should not be
	numbered.  Main heading in printed output has to be chapter, not
	section, in order to fit into the rest of the sectioning
	hierarchy.
	(Introduction): Add two intermediate headings in order to make the
	structure clearer.

	* doc/.cvsignore: Add auto directory.

2005-07-06  David Kastrup  <dak@gnu.org>

	* doc/tex-ref.tex: Rearrange and add information for preview-latex.

2005-07-05  David Kastrup  <dak@gnu.org>

	* doc/preview-latex.texi (Simple customization): Document new
	option `preview-preserve-counters'.
